<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:id="@+id/table_name">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/column_name_student"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/column_morning"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/column_afternoon"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/table_name"
        android:layout_centerHorizontal="true" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/baseline_add_24"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/register_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/baseline_assignment_24"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/add_student"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/add_student" />


</RelativeLayout>